--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: A Misc Set of Functions for Data Analysis
 Version: 0.0.0.9000
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
-Imports: dplyr, tibble, tools, lsr, stats
+Depends: assertthat
+Imports: dplyr, tibble, tools, lsr, stats, data.table
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
