small changes in scaler, consistency in mem_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,9 @@ export(counts)
 export(int_approx)
 export(is_vector)
 export(jaccard_m)
-export(mem_current)
-export(memory_max)
+export(mem_cur)
+export(mem_max)
 export(percent_change)
-export(predict)
 export(replace_na)
 export(rm_na)
 export(rotate)
