--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(percent_change)
 export(replace_na)
 export(rm_na)
 export(rotate)
+export(sample_large)
 export(scaler)
 export(scaler_)
 export(sum_to)
