--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(is_vector)
 export(jaccard_m)
 export(mem_cur)
 export(mem_max)
+export(pcaPlot)
 export(percent_change)
 export(replace_na)
 export(rm_na)
@@ -23,6 +24,7 @@ export(sum_to)
 export(unique_fraction)
 export(vector_to_tibble)
 import(assertthat)
+importFrom(GGally,scatmat)
 importFrom(data.table,setattr)
 importFrom(dplyr,n_distinct)
 importFrom(lsr,cramersV)
