added `append_time` and removed `sample_large`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(predict,scaler)
 S3method(scaler,data.frame)
 S3method(scaler,matrix)
+export(append_time)
 export(cor2)
 export(count_na)
 export(count_pattern)
@@ -17,20 +18,18 @@ export(percent_change)
 export(replace_na)
 export(rm_na)
 export(rotate)
-export(sample_large)
 export(scaler)
 export(scaler_)
 export(sum_to)
 export(unique_fraction)
 export(vector_to_tibble)
 import(assertthat)
+import(stats)
+import(tools)
 importFrom(GGally,scatmat)
 importFrom(data.table,setattr)
 importFrom(dplyr,n_distinct)
 importFrom(lsr,cramersV)
-importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
-importFrom(tools,file_path_sans_ext)
-importFrom(tools,list_files_with_exts)
 importFrom(utils,file_test)
