--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cor2)
 export(count_na)
 export(count_pattern)
 export(counts)
+export(cutq)
 export(int_approx)
 export(is_vector)
 export(jaccard_m)
