added outlierIndex + package version dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(is_vector)
 export(jaccard_m)
 export(mem_cur)
 export(mem_max)
+export(outlierIndex)
 export(pcaPlot)
 export(percent_change)
 export(replace_na)
@@ -26,13 +27,21 @@ export(sum_to)
 export(unique_fraction)
 export(vector_to_tibble)
 import(assertthat)
+import(ggplot2)
 import(stats)
 import(tools)
 importFrom(GGally,scatmat)
+importFrom(Rtsne,Rtsne)
 importFrom(data.table,setattr)
+importFrom(dbscan,kNNdist)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,filter_)
 importFrom(dplyr,n_distinct)
+importFrom(grDevices,boxplot.stats)
 importFrom(lsr,cramersV)
+importFrom(magrittr,"%>%")
 importFrom(randomForest,randomForest)
 importFrom(stats,sd)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,file_test)
