--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,24 @@
 Package: sidekicks
 Title: A Misc Set of Functions for Data Analysis
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
-Depends: assertthat, stats, tools
-Imports: dplyr, tibble, lsr, data.table, GGally, randomForest
+Depends:
+    assertthat (>= 0.2.0),
+    stats,
+    tools,
+    ggplot2 (>= 2.2.1)
+Imports: 
+    tibble (>= 1.3.4),
+    lsr (>= 0.5),
+    data.table (>= 1.10.4),
+    GGally (>= 1.3.2),
+    randomForest (>= 4.6-12),
+    grDevices,
+    Rtsne (>= 0.13),
+    dbscan (>= 1.1.1),
+    magrittr (>= 1.5),
+    dplyr (>= 0.7.3)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
