--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports:
     Rtsne (>= 0.13),
     dbscan (>= 1.1.1),
     magrittr (>= 1.5),
-    dplyr (>= 0.7.3)
+    dplyr (>= 0.7.3),
+    reshape2 (>= 1.4.2)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
