--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(mem_max)
 export(outlierIndex)
 export(pcaPlot)
 export(percent_change)
+export(prop_na)
 export(replace_na)
 export(rm_na)
 export(rotate)
