--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(count_na)
 export(count_pattern)
 export(counts)
 export(cutq)
+export(dist_pca)
 export(image2)
 export(int_approx)
 export(is_vector)
