--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Depends:
     stats,
     tools,
     ggplot2 (>= 2.2.1)
-Imports: 
+Imports:
     tibble (>= 1.3.4),
     lsr (>= 0.5),
     data.table (>= 1.10.4),
@@ -25,3 +25,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
