added functions for up/downsampling for binary classification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(count_pattern)
 export(counts)
 export(cutq)
 export(dist_pca)
+export(downsample_majority)
 export(image2)
 export(int_approx)
 export(is_vector)
@@ -28,6 +29,7 @@ export(scaler)
 export(scaler_)
 export(sum_to)
 export(unique_fraction)
+export(upsample_minority)
 export(vector_to_tibble)
 import(assertthat)
 import(ggplot2)
