added function `remove_duplicate_rows`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(outlierIndex)
 export(pcaPlot)
 export(percent_change)
 export(prop_na)
+export(remove_duplicate_rows)
 export(replace_na)
 export(rm_na)
 export(rotate)
