--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(image2)
 export(int_approx)
 export(is_vector)
 export(jaccard_m)
+export(kde2d_tidy)
 export(mem_cur)
 export(mem_max)
 export(outlierIndex)
@@ -38,6 +39,7 @@ import(stats)
 import(tools)
 importFrom(GGally,scatmat)
 importFrom(Rtsne,Rtsne)
+importFrom(data.table,":=")
 importFrom(data.table,setattr)
 importFrom(dbscan,kNNdist)
 importFrom(dplyr,bind_cols)
