--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    MASS
 VignetteBuilder: knitr
