--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(rotate)
 export(scaler)
 export(scaler_)
 export(sum_to)
+export(toString_to_character)
+export(toString_to_characterString)
 export(unique_fraction)
 export(upsample_minority)
 export(vector_to_tibble)
