--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(count_na)
 export(count_pattern)
 export(counts)
 export(cutq)
+export(decodeCharColumns)
 export(dist_pca)
 export(downsample_majority)
+export(encodeCharColumns)
 export(image2)
 export(int_approx)
 export(is_vector)
