--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sidekicks
 Title: A Misc Set of Functions for Data Analysis
-Version: 0.1.3
+Version: 0.1.4
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
 Depends:
@@ -20,7 +20,8 @@ Imports:
     magrittr (>= 1.5),
     dplyr (>= 0.7.3),
     reshape2 (>= 1.4.2),
-    proxy (>= 0.4.20)
+    proxy (>= 0.4.20),
+    base64enc (>= 0.1.3)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
