--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(decodeCharColumns)
 export(dist_pca)
 export(downsample_majority)
 export(encodeCharColumns)
+export(freq)
 export(image2)
 export(int_approx)
 export(is_vector)
