--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(scaler,data.frame)
 S3method(scaler,matrix)
 export(append_time)
 export(averageProximity)
+export(condense)
 export(cor2)
 export(count_na)
 export(count_pattern)
