local outlier in supervised setting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,9 @@ export(int_approx)
 export(is_vector)
 export(jaccard_m)
 export(kde2d_tidy)
+export(loc)
 export(mem_cur)
 export(mem_max)
-export(outlierIndex)
 export(pcaPlot)
 export(percent_change)
 export(prop_na)
