--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sidekicks
 Title: A Misc Set of Functions for Data Analysis
-Version: 0.1.9
+Version: 0.1.10
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
 Depends:
@@ -24,6 +24,7 @@ Imports:
     base64enc (>= 0.1.3),
     future (>= 1.8.1),
     future.apply (>= 1.0.0),
+    tidyr (>= 0.8.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
