--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(count_pattern)
 export(counts)
 export(cutq)
 export(decodeCharColumns)
+export(dir_apply)
 export(dist_pca)
 export(downsample_majority)
 export(encodeCharColumns)
