adding dr_measure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(decodeCharColumns)
 export(dir_apply)
 export(dist_pca)
 export(downsample_majority)
+export(dr_measure)
 export(encodeCharColumns)
 export(freq)
 export(image2)
