--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,9 @@ Imports:
     reshape2 (>= 1.4.2),
     proxy (>= 0.4.20),
     base64enc (>= 0.1.3),
-    future (>= 1.8.1),
-    future.apply (>= 1.0.0),
     tidyr (>= 0.8.0),
     parallelDist (>= 0.2.1),
+    pbapply(>= 1.3.4),
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
