--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(loc)
 export(mem_cur)
 export(mem_max)
 export(pcaPlot)
+export(peakmem)
 export(percent_change)
 export(prop_na)
 export(regression_corrector)
