--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(kde2d_tidy)
 export(loc)
 export(mem_cur)
 export(mem_max)
+export(na_approx)
 export(pcaPlot)
 export(peakmem)
 export(percent_change)
