--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sidekicks
 Title: A Misc Set of Functions for Data Analysis
-Version: 0.1.14
+Version: 0.1.15
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
 Depends:
@@ -27,6 +27,7 @@ Imports:
     pbmcapply(>= 1.2.5),
     processx (>= 2.0.0.1),
     stringr (>= 1.3.0),
+    zoo (>= 1.8.3),
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
