added encoding utils for DFs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,13 @@ export(count_pattern)
 export(counts)
 export(cutq)
 export(decodeCharColumns)
+export(decodeListColumns)
 export(dir_apply)
 export(dist_pca)
 export(downsample_majority)
 export(dr_measure)
 export(encodeCharColumns)
+export(encodeListColumns)
 export(freq)
 export(image2)
 export(int_approx)
@@ -38,6 +40,8 @@ export(remove_duplicate_rows)
 export(replace_na)
 export(rm_na)
 export(rotate)
+export(sample_frac_matrix)
+export(sample_n_matrix)
 export(scaler)
 export(scaler_)
 export(sum_to)
