outlier detection with hdbscam for large data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(loc)
 export(mem_cur)
 export(mem_max)
 export(na_approx)
+export(outlier_hdbscan)
 export(pcaPlot)
 export(peakmem)
 export(percent_change)
