--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sidekicks
 Title: A Misc Set of Functions for Data Analysis
-Version: 0.1.16
+Version: 0.1.17
 Authors@R: person("KS", "Srikanth", email = "sri.teach@gmail.com", role = c("aut", "cre"))
 Description: A misc set of functions used often during data analysis.
 Depends:
@@ -37,5 +37,6 @@ Suggests: knitr,
     MASS,
     MLmetrics,
     cowplot, 
-    gbm
+    gbm,
+    mvtnorm (>= 1.0.8),
 VignetteBuilder: knitr
